Fix requirements and set Python 3.10 runtime

--- a/Market_Dashboard/requirements.txt
+++ b/Market_Dashboard/requirements.txt
@@ -30,7 +30,7 @@ seaborn
 # Authentication
 streamlit-authenticator
 # Caching
-streamlit-caching
+streamlit==1.32.2
 # Deployment
 streamlit-cloud
 # Miscellaneous
